--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.2.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
