--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
