--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "next": "14.2.4",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18"
   },
