--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.19.1",
     "axios": "^1.7.2",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
     "next": "14.2.4",
     "react": "^18",
