--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase-admin": "^12.2.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
