--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "stripe": "^16.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
