--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "antd": "^5.19.1",
     "axios": "^1.7.2",
+    "embla-carousel-autoplay": "^8.1.7",
+    "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
     "next": "14.2.4",
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "embla-carousel": "^8.1.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
