--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
+    "jose": "^5.6.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
