--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
     "jose": "^5.6.3",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
