--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
+    "@stripe/stripe-js": "^4.4.0",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
@@ -22,17 +23,19 @@
     "firebase": "^10.13.0",
     "firebase-admin": "^12.2.0",
     "jose": "^5.6.3",
-    "next": "^14.2.7",
+    "next": "^14.2.8",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "stripe": "^16.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "embla-carousel": "^8.1.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
