--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "firebase-admin": "^12.2.0",
         "jose": "^5.6.3",
         "next": "^14.2.8",
+        "next-swagger-doc": "^0.4.0",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
         "quill": "^2.0.2",
@@ -34,12 +35,14 @@
         "react-dom": "^18",
         "react-icons": "^5.2.1",
         "react-quill": "^2.0.0",
-        "stripe": "^16.10.0"
+        "stripe": "^16.10.0",
+        "swagger-ui-react": "^5.17.14"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/swagger-ui-react": "^4.18.3",
         "@types/uuid": "^10.0.0",
         "embla-carousel": "^8.1.7",
         "eslint": "^8",
