--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "quill": "^2.0.2",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.53.0",
         "react-icons": "^5.2.1",
         "react-quill": "^2.0.0",
         "stripe": "^16.10.0",
