Add prettier - tailwind sorting plugin

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,7 @@
-{ "tabWidth": 4, "printWidth": 100, "trailingComma": "es5", "semi": true }
+{
+    "tabWidth": 4,
+    "printWidth": 100,
+    "trailingComma": "es5",
+    "semi": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
+}
