--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@stripe/stripe-js": "^4.4.0",
         "antd": "^5.19.1",
         "axios": "^1.7.2",
+        "chart.js": "^4.4.4",
         "dayjs": "^1.11.12",
         "embla-carousel-autoplay": "^8.1.7",
         "embla-carousel-react": "^8.1.7",
@@ -32,10 +33,12 @@
         "prettier-plugin-tailwindcss": "^0.6.6",
         "quill": "^2.0.2",
         "react": "^18",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.2.1",
         "react-quill": "^2.0.0",
+        "recharts": "^2.12.7",
         "stripe": "^16.10.0",
         "swagger-ui-react": "^5.17.14"
     },
