--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "firebase": "^10.13.0",
         "firebase-admin": "^12.2.0",
         "jose": "^5.6.3",
+        "lucide-react": "^0.446.0",
         "next": "^14.2.8",
         "next-swagger-doc": "^0.4.0",
         "prettier": "^3.3.3",
