--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "lucide-react": "^0.446.0",
         "next": "^14.2.8",
         "next-swagger-doc": "^0.4.0",
+        "nodemailer": "^6.9.15",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
         "quill": "^2.0.2",
@@ -46,6 +47,7 @@
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.16",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@types/swagger-ui-react": "^4.18.3",
